Fixing paths to imgs

--- a/ejercicio2.ipynb
+++ b/ejercicio2.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the image\n",
-    "img_path = './Imagenes/fingerprint.jpeg'  # Make sure to put the correct path here\n",
+    "img_path = './imgs/fingerprint.jpeg'  # Make sure to put the correct path here\n",
     "image = io.imread(img_path)\n",
     "\n",
     "# Convert image to grayscale if it is in color\n",
