--- a/ejercicio6.ipynb
+++ b/ejercicio6.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
     "from scipy.ndimage import label\n",
     "\n",
     "# Cargar la imagen desde una ruta y convertirla a escala de grises\n",
-    "rice_image_path = './Imagenes/rice.jpg'  # Asegúrate de tener la ruta correcta a la imagen\n",
+    "rice_image_path = './imgs/rice.jpg'  # Asegúrate de tener la ruta correcta a la imagen\n",
     "rice_image = Image.open(rice_image_path).convert('L')  # Convertir a escala de grises\n",
     "rice_array = np.array(rice_image)  # Convertir la imagen a un array de numpy\n",
     "\n",
