--- a/ejercicio2.ipynb
+++ b/ejercicio2.ipynb
@@ -1,77 +1,149 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-image in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (0.22.0)\n",
-      "Requirement already satisfied: numpy>=1.22 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (1.26.3)\n",
-      "Requirement already satisfied: scipy>=1.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (1.12.0)\n",
-      "Requirement already satisfied: networkx>=2.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (3.2.1)\n",
-      "Requirement already satisfied: pillow>=9.0.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (10.2.0)\n",
-      "Requirement already satisfied: imageio>=2.27 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (2.33.1)\n",
-      "Requirement already satisfied: tifffile>=2022.8.12 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (2024.1.30)\n",
-      "Requirement already satisfied: packaging>=21 in /Users/estebanaldanaguerra/Library/Python/3.12/lib/python/site-packages (from scikit-image) (23.2)\n",
-      "Requirement already satisfied: lazy_loader>=0.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (0.3)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "Collecting matplotlib\n",
-      "  Obtaining dependency information for matplotlib from https://files.pythonhosted.org/packages/9a/b0/dd2b60f2dd90fbc21d1d3129c36a453c322d7995d5e3589f5b3c59ee528d/matplotlib-3.8.2-cp312-cp312-macosx_11_0_arm64.whl.metadata\n",
-      "  Downloading matplotlib-3.8.2-cp312-cp312-macosx_11_0_arm64.whl.metadata (5.8 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Obtaining dependency information for contourpy>=1.0.1 from https://files.pythonhosted.org/packages/f3/9e/8fb3f53144269d3fecdd8786d3a4686eeff55b9b35a3c0772a3f62f71e36/contourpy-1.2.0-cp312-cp312-macosx_11_0_arm64.whl.metadata\n",
-      "  Downloading contourpy-1.2.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (5.8 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Obtaining dependency information for cycler>=0.10 from https://files.pythonhosted.org/packages/e7/05/c19819d5e3d95294a6f5947fb9b9629efb316b96de511b418c53d245aae6/cycler-0.12.1-py3-none-any.whl.metadata\n",
-      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Obtaining dependency information for fonttools>=4.22.0 from https://files.pythonhosted.org/packages/c0/bd/4dd1e8a9e632f325d9203ce543402f912f26efd213c8d9efec0180fbac64/fonttools-4.47.2-cp312-cp312-macosx_10_9_universal2.whl.metadata\n",
-      "  Downloading fonttools-4.47.2-cp312-cp312-macosx_10_9_universal2.whl.metadata (157 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m157.6/157.6 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting kiwisolver>=1.3.1 (from matplotlib)\n",
-      "  Obtaining dependency information for kiwisolver>=1.3.1 from https://files.pythonhosted.org/packages/26/61/58bb691f6880588be3a4801d199bd776032ece07203faf3e4a8b377f7d9b/kiwisolver-1.4.5-cp312-cp312-macosx_11_0_arm64.whl.metadata\n",
-      "  Downloading kiwisolver-1.4.5-cp312-cp312-macosx_11_0_arm64.whl.metadata (6.4 kB)\n",
-      "Requirement already satisfied: numpy<2,>=1.21 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (1.26.3)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/estebanaldanaguerra/Library/Python/3.12/lib/python/site-packages (from matplotlib) (23.2)\n",
-      "Requirement already satisfied: pillow>=8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (10.2.0)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
-      "  Obtaining dependency information for pyparsing>=2.3.1 from https://files.pythonhosted.org/packages/39/92/8486ede85fcc088f1b3dba4ce92dd29d126fd96b0008ea213167940a2475/pyparsing-3.1.1-py3-none-any.whl.metadata\n",
-      "  Downloading pyparsing-3.1.1-py3-none-any.whl.metadata (5.1 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/estebanaldanaguerra/Library/Python/3.12/lib/python/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/estebanaldanaguerra/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Downloading matplotlib-3.8.2-cp312-cp312-macosx_11_0_arm64.whl (7.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.5/7.5 MB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading contourpy-1.2.0-cp312-cp312-macosx_11_0_arm64.whl (242 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.6/242.6 kB\u001b[0m \u001b[31m17.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Downloading fonttools-4.47.2-cp312-cp312-macosx_10_9_universal2.whl (2.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading kiwisolver-1.4.5-cp312-cp312-macosx_11_0_arm64.whl (64 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.0/65.0 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading pyparsing-3.1.1-py3-none-any.whl (103 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.1/103.1 kB\u001b[0m \u001b[31m13.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pyparsing, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
-      "Successfully installed contourpy-1.2.0 cycler-0.12.1 fonttools-4.47.2 kiwisolver-1.4.5 matplotlib-3.8.2 pyparsing-3.1.1\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
    "source": [
-    "!pip3 install scikit-image\n",
-    "!pip3 install matplotlib"
+    "# Morphological Operations on a Fingerprint Image\n",
+    "\n",
+    "In this notebook, we demonstrate the application of morphological operations to enhance a fingerprint image. The process involves converting the image to grayscale, inverting it, binarizing it using Otsu's method, and then applying specific morphological operations to remove small objects and close small holes. These steps are crucial for preprocessing images in applications such as fingerprint analysis where clarity and detail are essential."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Necessary Libraries\n",
+    "\n",
+    "We begin by importing the required libraries from `skimage` for image processing, and `matplotlib.pyplot` for image visualization."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip3 install scikit-image\n",
+    "# !pip3 install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage import io, util, morphology, filters\n",
+    "from skimage.color import rgb2gray\n",
+    "from skimage.morphology import disk\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading and Preprocessing the Image\n",
+    "\n",
+    "The image is loaded and then converted to grayscale if it is not already. This step is essential for the subsequent binarization and morphological operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the image\n",
+    "img_path = './imgs/fingerprint.jpeg'  # Make sure to put the correct path here\n",
+    "image = io.imread(img_path)\n",
+    "\n",
+    "# Convert image to grayscale if it is in color\n",
+    "if len(image.shape) == 3:\n",
+    "    image = rgb2gray(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binarization Using Otsu's Method\n",
+    "\n",
+    "We invert the image to prepare it for binarization. Otsu's method is then applied to obtain a binary image, which differentiates the foreground (fingerprint) from the background."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Invert the image\n",
+    "inverted_image = util.invert(image)\n",
+    "\n",
+    "# Binarize the image using Otsu's method\n",
+    "thresh = filters.threshold_otsu(inverted_image)\n",
+    "binary_image = inverted_image > thresh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Morphological Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing Small Objects\n",
+    "\n",
+    "This operation aims to remove noise and small artifacts that are not part of the fingerprint. Objects smaller than a specified size are removed from the binary image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove small objects\n",
+    "cleaned_image = morphology.remove_small_objects(binary_image, min_size=64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closing Small Holes\n",
+    "\n",
+    "Closing is applied to the cleaned image to fill in small holes and ensure continuity in the fingerprint ridges. This step uses a disk-shaped structural element for the morphological closing operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close small holes\n",
+    "restored_image = morphology.closing(cleaned_image, disk(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Results\n",
+    "\n",
+    "Finally, we visualize the original, binarized, and restored images side by side for comparison."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -86,33 +158,6 @@
     }
    ],
    "source": [
-    "from skimage import io, util, morphology, filters\n",
-    "from skimage.color import rgb2gray\n",
-    "from skimage.morphology import disk\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load the image\n",
-    "img_path = './imgs/fingerprint.jpeg'  # Make sure to put the correct path here\n",
-    "image = io.imread(img_path)\n",
-    "\n",
-    "# Convert image to grayscale if it is in color\n",
-    "if len(image.shape) == 3:\n",
-    "    image = rgb2gray(image)\n",
-    "\n",
-    "# Invert the image\n",
-    "inverted_image = util.invert(image)\n",
-    "\n",
-    "# Binarize the image using Otsu's method\n",
-    "thresh = filters.threshold_otsu(inverted_image)\n",
-    "binary_image = inverted_image > thresh\n",
-    "\n",
-    "# Apply morphological operations\n",
-    "# Remove small objects\n",
-    "cleaned_image = morphology.remove_small_objects(binary_image, min_size=64)\n",
-    "\n",
-    "# Close small holes\n",
-    "restored_image = morphology.closing(cleaned_image, disk(3))\n",
-    "\n",
     "# Plotting the images\n",
     "fig, axes = plt.subplots(1, 3, figsize=(20, 10))\n",
     "axes[0].imshow(image, cmap='gray')\n",
